# torf-cli

./: .gitignore  CHANGELOG  Makefile  README.asciidoc  README.rst  pyproject.toml  setup.py  tox.ini
doc/: manpage.md  torf.1  torf.1.asciidoc  torf.1.html
doc/man/man1/: torf.1
docs/: torf.1  torf.1.asciidoc  torf.1.html
man/man1/: torf.1
tests/: conftest.py  test_basics.py  test_config.py  test_configfile.py  test_configformat.py  test_create.py  test_edit.py  test_errors.py  test_info.py  test_json.py  test_metainfo.py  test_profiles.py  test_progress.py  test_reuse.py  test_stdin.py  test_util.py  test_utils.py  test_verify.py
torfcli/: __init__.py  __main__.py  __vars__.py  _cli.py  _config.py  _configfile.py  _errors.py  _main.py  _term.py  _ui.py  _util.py  _utils.py  _vars.py
